--- a/beats_ls_es/004-hpa.yaml
+++ b/beats_ls_es/004-hpa.yaml
@@ -7,6 +7,11 @@ metadata:
 spec:
   minReplicas: 1
   maxReplicas: 2
+  behavior:
+    scaleUp:
+      stabilizationWindowSeconds: 60
+    scaleDown:
+      stabilizationWindowSeconds: 180
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
@@ -15,6 +20,12 @@ spec:
     - type: Resource
       resource:
         name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 80
+    - type: Resource
+      resource:
+        name: memory
         target:
           type: Utilization
           averageUtilization: 80
