add beats logstash tls mutual verification

--- a/beats_ls_es/001-configmap.yaml
+++ b/beats_ls_es/001-configmap.yaml
@@ -5,13 +5,18 @@ data:
     input {
       beats {
         port => "5044"
+        ssl => true
+        ssl_certificate_authorities => ["/usr/share/logstash/config/ca.crt"]
+        ssl_certificate => "/usr/share/logstash/config/server.crt"
+        ssl_key => "/usr/share/logstash/config/server.pkcs8.key"
+        ssl_verify_mode => "force_peer"
       }
     }
     output {
       elasticsearch { 
         hosts => ["https://demo-es-http:9200"]
         index => "kube-apiserver-%{+YYYY.MM.dd}"
-        cacert => "/usr/share/logstash/config/ca.crt"
+        cacert => "/usr/share/logstash/config/es_ca.crt"
         user => 'elastic'
         password => '${ELASTICSEARCH_PASSWORD}'
       }
