--- a/stack_monitoring/001-configmap.yaml
+++ b/stack_monitoring/001-configmap.yaml
@@ -26,7 +26,7 @@ apiVersion: v1
 data:
   logstash.yml: |
     api.http.host: "0.0.0.0"
-    monitoring.cluster_uuid: # YOUR PRODUCTION ES CLUSTER UUID
+    # monitoring.cluster_uuid: # YOUR PRODUCTION ES CLUSTER UUID
 kind: ConfigMap
 metadata:
   name: logstash-config
