--- a/beats_ls_es/002-deployment.yaml
+++ b/beats_ls_es/002-deployment.yaml
@@ -62,6 +62,9 @@ spec:
             - name: logstash-config
               mountPath: /usr/share/logstash/config/logstash.yml
               subPath: logstash.yml
+            - name: logstash-keystore
+              mountPath: /usr/share/logstash/config/logstash.keystore
+              subPath: logstash.keystore
             - name: es-certs
               mountPath: /usr/share/logstash/config/es_ca.crt
               subPath: ca.crt
@@ -81,6 +84,9 @@ spec:
         - name: logstash-config
           configMap:
             name: logstash-config
+        - name: logstash-keystore
+          secret:
+            secretName: logstash-keystore
         - name: es-certs
           secret:
             secretName: demo-es-http-certs-public
